added changelog readme

--- a/changelog/pages/changelogs/list-of-orgs.mdx
+++ b/changelog/pages/changelogs/list-of-orgs.mdx
@@ -1,7 +1,7 @@
 import { MdxLayout } from "components/mdx-layout.tsx";
 
 export const meta = {
-  slug: "list-of-org",
+  slug: "list-of-orgs",
   publishedAt: "2023-02-08T09:00:00.000Z",
   title: "Create, List & Join Orgs",
   headerImage: "/changelogs/listorgs.png",
